--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -168,33 +168,33 @@
                 <td>
                     {% if row.dean %}
                         <div class="info-grid">
-                            <div>Dean ID</div><div><strong>: {{ row.dean.userId }}</strong></div>
-                            <div>Dean Name</div><div><strong>: {{ row.dean.userName }}</strong></div>
-                            <div>Dean Email</div><div><strong>: {{ row.dean.userEmail }}</strong></div>
-                            <div>Dean Contact</div><div><strong>: {{ row.dean.userContact }}</strong></div>
-                            <div>Dean Department</div><div><strong>: {{ row.dean.userDepartment }}</strong></div>
+                            <div>ID</div><div><strong>: {{ row.dean.userId }}</strong></div>
+                            <div>Name</div><div><strong>: {{ row.dean.userName }}</strong></div>
+                            <div>Email</div><div><strong>: {{ row.dean.userEmail }}</strong></div>
+                            <div>Contact</div><div><strong>: {{ row.dean.userContact }}</strong></div>
+                            <div>Department</div><div><strong>: {{ row.dean.userDepartment }}</strong></div>
                         </div>
                     {% endif %}
                 </td>
                 <td>
                     {% if row.hos %}
                         <div class="info-grid">
-                            <div>Hos ID</div><div><strong>: {{ row.hos.userId }}</strong></div>
-                            <div>Hos Name</div><div><strong>: {{ row.hos.userName }}</strong></div>
-                            <div>Hos Email</div><div><strong>: {{ row.hos.userEmail }}</strong></div>
-                            <div>Hos Contact</div><div><strong>: {{ row.hos.userContact }}</strong></div>
-                            <div>Hos Department</div><div><strong>: {{ row.hos.userDepartment }}</strong></div>
+                            <div>ID</div><div><strong>: {{ row.hos.userId }}</strong></div>
+                            <div>Name</div><div><strong>: {{ row.hos.userName }}</strong></div>
+                            <div>Email</div><div><strong>: {{ row.hos.userEmail }}</strong></div>
+                            <div>Contact</div><div><strong>: {{ row.hos.userContact }}</strong></div>
+                            <div>Department</div><div><strong>: {{ row.hos.userDepartment }}</strong></div>
                         </div>
                     {% endif %}
                 </td>
                 <td>
                     {% if row.hop %}
                         <div class="info-grid">
-                            <div>Hop ID</div><div><strong>: {{ row.hop.userId }}</strong></div>
-                            <div>Hop Name</div><div><strong>: {{ row.hop.userName }}</strong></div>
-                            <div>Hop Email</div><div><strong>: {{ row.hop.userEmail }}</strong></div>
-                            <div>Hop Contact</div><div><strong>: {{ row.hop.userContact }}</strong></div>
-                            <div>Hop Department</div><div><strong>: {{ row.hop.userDepartment }}</strong></div>
+                            <div>ID</div><div><strong>: {{ row.hop.userId }}</strong></div>
+                            <div>Name</div><div><strong>: {{ row.hop.userName }}</strong></div>
+                            <div>Email</div><div><strong>: {{ row.hop.userEmail }}</strong></div>
+                            <div>Contact</div><div><strong>: {{ row.hop.userContact }}</strong></div>
+                            <div>Department</div><div><strong>: {{ row.hop.userDepartment }}</strong></div>
                         </div>
                     {% endif %}
                 </td>
